# we-need-soket-programming

./: .gitignore.txt
vending-machine/vending_machine_refactor/: README.md  pyproject.toml  pyside_gui (1).py  requirements.txt  run_gui.bat  run_gui.py  run_network_servers.bat  run_server1.bat  run_server2.bat
vending-machine/vending_machine_refactor/data/server/: debug_direct2.db  debug_server1.db  server1.db  server2.db
vending-machine/vending_machine_refactor/legacy/: coins.txt  drinks.txt  password.txt  sales.txt  sales_cycle.txt  transaction.txt
vending-machine/vending_machine_refactor/scripts/: bootstrap_workbook.py  migrate_from_legacy_txt.py  seed_demo_analytics.py
vending-machine/vending_machine_refactor/src/vending_machine/: __init__.py
vending-machine/vending_machine_refactor/src/vending_machine/app/: __init__.py  dto.py  report_service.py  service.py
vending-machine/vending_machine_refactor/src/vending_machine/domain/: __init__.py  change.py  exceptions.py  models.py
vending-machine/vending_machine_refactor/src/vending_machine/infra/: excel_repository.py  file_lock.py  security.py
vending-machine/vending_machine_refactor/src/vending_machine/network/: __init__.py  client.py  config.py  gateway.py  queue.py  runtime.py  schemas.py  sync_protocol.py
vending-machine/vending_machine_refactor/src/vending_machine/presentation/: cli.py  pyside_gui.py
vending-machine/vending_machine_refactor/tests/: test_change.py  test_network_gateway.py  test_purchase.py  test_reports_and_audit.py  test_repository_session.py  test_server_api.py  test_sync_server.py
(+7 files in other folders)
